--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 {
-  "presets": ["react-native"]
+  "presets": [
+    "react-native",
+    "react-native-stage-0",
+    "react-native-dotenv"
+  ],
+  "plugins": [
+    ["babel-plugin-root-import", {
+      "rootPathSuffix": "src"
+    }]
+  ]
 }
